Facebook 3.2.3~core1

	* Update to newest version of the Facebook API from upstream.

Facebook 3.2.0~core8

	* Use the View instead of CurrentPage for attaching the HTML attribute.
	-- Charlie Powell <charlie@eval.bz>  Mon, 30 Sep 2013 00:04:08 -0400

Facebook 3.2.0~core7

	* Make use of the namespace versions of View instead of static.
	* New facebook button class, "facebook-button".
	-- Charlie Powell <charlie@eval.bz>  Sat, 31 Aug 2013 17:29:10 -0400

Facebook 3.2.0~core6

	* Updated some things to keep up with Core 2.5.7
	* Switched Gender to a selectbox instead of an open ended text field.
	-- Charlie Powell <charlie@eval.bz>  Wed, 12 Jun 2013 17:17:25 -0400

Facebook 3.2.0~core5

	* Minor change in the Core integration to know if facebook has been configured or not.
	-- Charlie Powell <charlie@eval.bz>  Sun, 09 Jun 2013 18:59:28 -0400

Facebook 3.2.0~core4

	* Logic was moved from the user system to this component.  This includes the login widget, some
	  styles, and the javascript.
	-- Charlie Powell <charlie@eval.bz>  Fri, 22 Feb 2013 15:36:46 -0500

Facebook 3.2.0~core3

	* [Feature] Added open graph utilities as part of a new core hook.
	* Updated some of the javascript integrators
	-- Charlie Powell <charlie@eval.bz>  14 Oct 2012

Facebook 3.2.0~core2

	* [Bug] Fix the requirement set for this package.
	-- Charlie Powell <charlie@eval.bz>  8 Oct 2012

Facebook 3.2.0~core1

	* Upgraded facebook api to newest upstream version, (3.2.0)
	-- Nicholas Hinsch <nicholas@eval.bz>  3 Oct 2012

Facebook 3.0.1~core1

	-- Charlie Powell <charlie@eval.bz>  15 Jun 2012
